import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;

public class Main {
    public static void main(String[] args) {


        Streaming streaming = new Streaming();
        streaming.startStreaming();

        /*FileIO fileIO = new FileIO();2
        List<Movie>media = new ArrayList<>();
        String[] genre = {"crime", "Drama"};
        media.add(new Movie("hej",1999,genre,10));
        fileIO.saveSavedMovie(media);
*/
    }
}